Version v4.0.94
https://gurux.fi/release/guruxdlmsjava-4094